[package]
name = "mem-yaml"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
serde_yaml = "0.9.33"
uuid = { version = "1.10", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
fsrs = "1.3.4"

[dependencies.tokio]
version = "1"
features = ["full"]
