[package]
name = "mem-yaml"
version = "0.1.0-alpha"
edition = "2021"
authors = ["haruki-nikaidou"]
repository = "https://github.com/haruki-nikaidou/mem-yaml.git"
description = "Anki's alternative for who hates GUI and mouse clicks"

[dependencies]
anyhow = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
serde_yaml = "0.9.33"
uuid = { version = "1.10", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
fsrs = "1.3.4"
ratatui = "0.29.0"
crossterm = "0.28.1"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"

[dependencies.tokio]
version = "1"
features = ["full"]
